[tool.poetry]
name = "cloud_lidar"
version = "0.1.0"
description = ""
authors = ["Andrii Isiuk <andrii.isiuk@skygate.io>"]

[tool.poetry.dependencies]
python = "^3.6.10"
pye57 = "^0.2.3"
laspy = "^1.7.0"
liblas = "^1.8.1"
pylas = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
