[tool.poetry]
name = "cloud_lidar"
version = "0.1.0"
description = ""
authors = ["Andrii Isiuk <andrii.isiuk@skygate.io>"]

[tool.poetry.dependencies]
python = "^3.6.10"
pylas = "^0.4.2"
colours = "^0.3"
opencv-python = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
